--- a/style.css
+++ b/style.css
@@ -12,17 +12,20 @@
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
+    background-color: rgb(246, 222, 8);
   }
-
+  
   h1{
     text-align: center;
+    background-color: yellow;
+    box-shadow: 0px 5px 10px 1px rgb(255, 255, 0);
   }
-
+  
   h1::first-letter{
     color: rgb(255, 213, 0);
     font-size: larger;
   }
-
+  
   .container {
     border-color: red;
     height: 100vh;
@@ -31,7 +34,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
-
+  
   .pokemon {
     width: 18%;
     padding: 10px;
@@ -39,6 +42,7 @@
     margin-top: 20px;
     border-radius: 10px;
     background-color: white;
+    background-color: rgb(255, 191, 0);
     box-shadow: 0px 0px 6px 1px gray;
   }
 
