--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     outline: none;
     transition: 0.4s;
     font-family: "Poppins", sans-serif;
+    color: white;
   }
 
   body,
@@ -12,17 +13,17 @@
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
-    background-color: rgb(246, 222, 8);
+    background-color: rgb(10, 10, 10);
   }
   
   h1{
     text-align: center;
-    background-color: yellow;
-    box-shadow: 0px 5px 10px 1px rgb(255, 255, 0);
+    background-color: transparent;
+    box-shadow: 0px 5px 10px 1px rgb(24, 24, 24);
   }
   
   h1::first-letter{
-    color: rgb(255, 213, 0);
+    color: rgb(153, 0, 255);
     font-size: larger;
   }
   
@@ -38,12 +39,12 @@
   .pokemon {
     width: 18%;
     padding: 10px;
-    border: 0px solid;
+    border: 2px solid;
     margin-top: 20px;
-    border-radius: 10px;
-    background-color: white;
-    background-color: rgb(255, 191, 0);
-    box-shadow: 0px 0px 6px 1px gray;
+    background-color: black;
+    box-shadow: 0px 0px 6px 1px rgb(27, 26, 26);
+    /* border-image: linear-gradient(45deg,rgb(0, 255, 81),rgb(0, 157, 255)) 10; */
+    border-image: linear-gradient(45deg,rgb(255, 0, 204),rgb(0, 157, 255)) 10;
   }
 
   .pokemon:hover {
