--- a/style.css
+++ b/style.css
@@ -15,9 +15,17 @@
     overflow-x: hidden;
     background-color: rgb(10, 10, 10);
   }
+
+
+  header{
+    display: flex;
+    justify-content: space-around;
+  }
+
+  
   
   h1{
-    text-align: center;
+    /* text-align: center; */
     background-color: transparent;
     box-shadow: 0px 5px 10px 1px rgb(24, 24, 24);
   }
@@ -25,6 +33,21 @@
   h1::first-letter{
     color: rgb(153, 0, 255);
     font-size: larger;
+  }
+
+  input{
+    background-color: black;
+    width: 60vw;
+    padding: 5px;
+    border: 2px solid;
+    border-image: linear-gradient(45deg,rgb(255, 0, 204),rgb(0, 157, 255)) 10;;
+  
+  }
+
+  .search-box{
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 5px;
   }
   
   .container {
