--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background: linear-gradient(rgb(0, 217, 255), rgb(238, 0, 255));
+  /* background: linear-gradient(rgb(0, 217, 255), rgb(238, 0, 255)); */
+  background: linear-gradient(#2298ff, #9733EE);
   border-radius: 10px;
   cursor: pointer;
 }
